--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,23 @@
             android:id="@+id/MyOffers"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.05" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Client App VErsion"
+            android:id="@+id/button3"
+            android:layout_gravity="right"
+            android:layout_weight="0.05"
+            android:onClick="OnClickedClientVersion" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="WS Version"
+            android:id="@+id/button2"
+            android:layout_weight="0.05"
+            android:onClick="OnClickedWSVersion" />
     </LinearLayout>
 
 </RelativeLayout>
