--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Client App VErsion"
+            android:text="Client App Version"
             android:id="@+id/button3"
             android:layout_gravity="right"
             android:layout_weight="0.05"
