--- a/app/src/main/res/menu/menu_intro.xml
+++ b/app/src/main/res/menu/menu_intro.xml
@@ -3,4 +3,6 @@
     tools:context="gr.teicm.se.closestofferfinder.client.presentation.activities.IntroActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+        android:orderInCategory="100" android:showAsAction="never" />
 </menu>
