--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,15 @@
             android:layout_weight="0.05"
             android:onClick="OnClickedClientVersion" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Location"
+            android:id="@+id/button5"
+            android:layout_gravity="right"
+            android:layout_weight="0.05"
+            android:onClick="OnButtonClickedMyLocation" />
+
     </LinearLayout>
 
     <Button
