--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="gr.teicm.se.closestofferfinder.client.presentation.activities.IntroActivity"
+    tools:context="gr.teicm.se.closestofferfinder.client.gr.teicm.se.closestofferfinder.client.presentation.activities.IntroActivity"
     android:background="@android:color/holo_purple">
 
     <Button
